Implemented attack generation

--- a/template.handlebars
+++ b/template.handlebars
@@ -25,8 +25,8 @@
         {{/if}}{{#if condition-immunities}}condition-immunities = { {{~condition-immunities~}} },
         {{/if}}{{#if senses}}senses = { {{~senses~}} },
         {{/if}}{{#if languages}}languages = { {{~languages~}} },
-        {{/if}}{{#if challenge}}challenge = {{challenge}},
-    {{/if}}]
+        {{/if}}{{#if challenge}}challenge = { {{~challenge~}} }{{/if}}
+    ]
 
     {{#each trait}}
     \DndMonsterAction{ {{~this.name~}} }
@@ -57,7 +57,6 @@
     \end{DndMonsterSpells}
     
     {{/if}}
-
     \DndMonsterSection{Actions}
 
     {{#each action}}
@@ -65,4 +64,32 @@
     {{this.desc}}
 
     {{/each}}
+    {{#each attack}}
+    \DndMonsterAttack[
+        name = { {{~this.name~}} },
+        distance = {{this.distance}},
+        type = {{this.type}},
+        mod = { {{~this.mod~}} },
+        {{#if this.reach}}reach = { {{~this.reach~}} },
+        {{/if}}{{#if this.range}}range = { {{~this.range~}} },
+        {{/if}}{{#if this.targets}}targets = { {{~this.targets~}} },
+        {{/if}}dmg = \DndDice{ {{~this.damage~}} },
+        dmg-type = {{this.damage-type}},
+        {{#if this.plus-damage}}plus-dmg = { {{~this.plus-damage~}} },
+        {{/if}}{{#if this.plus-damage-type}}plus-dmg-type = {{this.plus-damage-type}},
+        {{/if}}{{#if this.or-damage}}or-dmg = { {{~this.or-damage~}} },
+        {{/if}}{{#if this.or-damage-when}}or-dmg-when = { {{~this.or-damage-when~}} },
+        {{/if}}{{#if extra}}extra = { {{~this.extra~}} }{{/if}}
+]
+    {{/each}}
+    {{#if legendary-action-desc}}
+    \DndMonsterSection{Legendary Actions}
+    {{legendary-action-desc}}
+    \begin{DndMonsterLegendaryActions}
+        {{#each legendary}}
+        \DndMonsterLegendaryAction[ {{~this.name~}} ]{ {{~this.desc~}} }
+        {{/each}}
+    \end{DndMonsterLegendaryActions}
+
+    {{/if}}
 \end{DndMonster}
